--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.17.14",
+    "@tanstack/react-query-devtools": "^5.32.0",
     "@tanstack/react-table": "^8.16.0",
     "@types/firebase": "^3.2.1",
     "class-variance-authority": "^0.7.0",
