--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
-    "@tanstack/react-query": "^5.17.14",
     "@tanstack/react-query-devtools": "^5.32.0",
     "@tanstack/react-table": "^8.16.0",
     "@types/firebase": "^3.2.1",
+    "@types/react-query": "^1.2.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.2",
@@ -35,6 +35,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-intersection-observer": "^9.8.2",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
