[style] 랜딩 페이지 퍼블리싱 1차

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-query": "^1.2.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-autoplay": "^8.0.2",
     "embla-carousel-react": "^8.0.2",
     "firebase": "^10.11.0",
     "lucide-react": "^0.368.0",
