--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.51.3",
     "react-intersection-observer": "^9.8.2",
     "react-query": "^3.39.3",
