--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.51.3",
+    "react-image-file-resizer": "^0.4.8",
     "react-intersection-observer": "^9.8.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
